<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="match_parent">

    <NumberPicker
        android:id="@+id/numberPickerHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/txtSeprateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"
        android:text=" : "
        android:textSize="25dp"
        android:layout_toRightOf="@+id/numberPickerHours"/>

    <NumberPicker
        android:id="@+id/numberPickerMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/txtSeprateur"
        android:layout_marginTop="60dp" />

    <Button
        android:id="@+id/hourValiderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/numberPickerMinutes"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_valider"
        android:layout_toLeftOf="@+id/numberPicker"
        android:text="Valider" />

</RelativeLayout>