<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.usherbrooke.deliverresto.CarteFragment">

    <Button
        android:id="@+id/menuButton"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:gravity="center_vertical"
        android:textSize="30sp"
        android:paddingLeft="10dp"
        android:background="@drawable/menu_background"
        android:text="Menu"
        android:textColor="@android:color/holo_blue_dark" />

    <Button
        android:id="@+id/entreesButton"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:gravity="center_vertical"
        android:textSize="30sp"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/entrees_background"
        android:text="Entrées"
        android:textColor="@android:color/holo_blue_dark" />

    <Button
        android:id="@+id/platsButton"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:gravity="center_vertical"
        android:textSize="30sp"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/plats_background"
        android:text="Plats"
        android:textColor="@android:color/holo_blue_dark" />

    <Button
        android:id="@+id/dessertsButton"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:gravity="center_vertical"
        android:textSize="30sp"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/desserts_background"
        android:text="Desserts"
        android:textColor="@android:color/holo_blue_dark" />

    <Button
        android:id="@+id/boissonsButton"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:gravity="center_vertical"
        android:textSize="30sp"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/boissons_background"
        android:text="Boissons"
        android:textColor="@android:color/holo_blue_dark" />

</LinearLayout>

